--- a/templates/all.html
+++ b/templates/all.html
@@ -2,7 +2,7 @@
 <html lang="zh-hant">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <title>大表</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
             integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
