--- a/templates/all.html
+++ b/templates/all.html
@@ -37,7 +37,7 @@
 </nav>
 {#NAV--END#}
 <center style="margin-top: 20px">
-    <table class="col-6 table table-striped">
+    <table class="col-10 table table-striped" style="max-width: 800px">
         <thead>
         <tr>
             <th scope="col">#</th>
