--- a/templates/Index.html
+++ b/templates/Index.html
@@ -104,7 +104,7 @@
         });
     }
 
-    var clock = setInterval(update, 5000);
+    //var clock = setInterval(update, 5000);
 
     function update() {
         $.ajax({
